environments/example-es-truststore/services/voyagesms/base/config/service.yaml
---
# Source: voyagesms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: "voyages-ms"
  labels:
    chart: "voyagesms-1.0.0"
    app.kubernetes.io/part-of: refarch-kc
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    nodePort: 31000
  selector:
    app: "voyagesms-selector"
