environments/example-es-truststore/services/voyagesms/base/config/route.yaml
---
# Source: voyagesms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-voyagesms
  labels:
    chart: 'voyagesms-1.0.0'
    app.kubernetes.io/part-of: refarch-kc
spec:
  path: /
  to:
    kind: Service
    name: "voyages-ms"
    weight: 100
  port:
    targetPort: http
